src/App.css
/* ... */
iframe{
  height: 80vh;
  width: 190%;
  margin: 0 0 0 20px;
}
 
.ruby-img, .rails-img, .react-img, .js-img, .active-record, .html-img, .css-img, .mq-img, .redux-img, .heroku-img, .sqlite-img{
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.rails-img, .redux-img, .sqlite-img, .react-img, .mq-img{
  background-size: 80%;
}

.active-record{
  background-size: 50%;
}


.js-img, .html-img, .heroku-img, .css-img{
  background-size: cover;
}

.ruby-img{
  background-image: url('./images/ruby.jpg');
}

.rails-img{
  background-image: url('./images/rails.png');
}

.react-img{
  background-image: url('./images/react.gif');
}

.js-img{
  background-image: url('./images/javascript.jpg');
}

.active-record{
  background-image: url('./images/active-record.png');
}

.html-img{
  background-image: url('./images/html.png');
}

.css-img{
  background-image: url('./images/css.jpg');
}

.mq-img{
  background-image: url('./images/mq.png');
}

.redux-img{
  background-image: url('./images/redux.png');
}

.heroku-img{
  background-image: url('./images/heroku.png');
}

.sqlite-img{
  background-image: url('./images/sqlite.png');
}

.contact-div{
  position: absolute;
  justify-content: space-between;
  display: flex;
}

.contact-div a{
  width: 20%;
}

.contact-div a img{
  width: 100%;
}

@media (prefers-reduced-motion: no-preference) {
  .linked-in-div a img:hover {
    animation: img-spin infinite 1s linear;
  }
}

@keyframes img-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media only screen and (min-width: 300px){

  .myname{
   left: 550px;
  }

  .floor{
    width: 405%;
    left: 0;
  }

  .postits{
    left: -380px;
    top:900px;
  }

  .post-it-1, .post-it-2, .post-it-3, .post-it-4{
    width:500px;
    height: 500px;
    left: 500px;
  }

  .post-it-2{
    left: 1100px;
  }
  
  .post-it-3{
    top: 700px;
  }

  .post-it-4{
    left: 1100px;
    top: 700px;
  }

  .post-it-1:after, .post-it-2:after, .post-it-3:after , .post-it-4:after{
    top: -15px;
    left: -1px;
  }

  .postits p{
    padding-top: 200px;
  }

  .css-art p{
    top: -150px;
    left: 1450px;
  }

  .table{
    left: 450px;
  }

  .table-front{
    left: 460px;
  }

  .chair{
    left: 600px;
  }

  .pencil-jar{
    left: 850px;
  }

  .dog{
    left: 950px;
  }

  .t-shirt{
    left: 625px;
  }

  .head{
    left: 640px;
  }

  .neck{
    left: 675px;
  }

  .hair{
    left: 620px;
  }

  .computer{
    left: 620px;
  }

  .coffee{
    left: 290px;
  }

  .garbage-can{
    left: 350px;
  }

  .shelf{
    left: 300px;
  }

  .window{
    left: 950px;
  }

  .awssld, .bio-card, .contact-card{
    top: 1000px;
    left: 120px;
    width: 345% !important; 
    height: 195vh !important;
  }
 
  .bio-img-container img{
    margin: 240px 100px;
    width: 100%;
   }

   .project-div{
     padding-top: 10em;
   }

  .text-container{
    padding: 300px 0 20px 60px;
    line-height: 35px;
  }
  .contact-div{
    padding: 450px  100px;
  }

}

@media only screen and (min-width: 350px){

  .myname{
    left: 550px;
  }
  
  .floor{
    width: 405%;
    left: 0;
  }

  .postits{
    left: -300px;
    top:1000px;
  }

  .post-it-1, .post-it-2, .post-it-3, .post-it-4{
    width:500px;
    height: 500px;
    left: 500px;
  }

  .post-it-2{
    left: 1100px;
  }
  
  .post-it-3{
    top: 700px;
  }

  .post-it-4{
    left: 1100px;
    top: 700px;
  }

  .post-it-1:after, .post-it-2:after, .post-it-3:after , .post-it-4:after{
    top: -15px;
    left: -1px;
  }

  .postits p{
    padding-top: 200px;
  }

  .css-art p{
    top: -150px;
    left: 1450px;
  }

  .table{
    left: 450px;
  }

  .table-front{
    left: 460px;
  }

  .chair{
    left: 600px;
  }

  .pencil-jar{
    left: 850px;
  }

  .dog{
    left: 950px;
  }

  .t-shirt{
    left: 625px;
  }

  .head{
    left: 640px;
  }

  .neck{
    left: 675px;
  }

  .hair{
    left: 620px;
  }

  .computer{
    left: 620px;
  }

  .coffee{
    left: 290px;
  }

  .garbage-can{
    left: 350px;
  }

  .shelf{
    left: 300px;
  }

  .window{
    left: 1000px;
  }

  .awssld, .bio-card, .contact-card{
    top: 1100px;
    left: 200px;
    width: 306% !important; 
    height: 175vh !important;
  }
 
  .bio-img-container img{
    margin: 240px 100px;
    width: 100%;
   }

   .project-div{
     padding-top: 10em;
   }

  .text-container{
    padding: 300px 0 20px 60px;
    line-height: 35px;
  }
  .contact-div{
    padding: 450px  100px;
  }
}

@media only screen and (min-width: 375px){

  .myname{
    left: 550px;
  }
  
  .awssld, .bio-card, .contact-card{
    top: 1100px;
    left: 200px;
    width: 295% !important; 
    height: 165vh !important;
  }
 
  .bio-img-container img{
    margin: 240px 100px;
    width: 100%;
   }
  
   .project-div{
     padding-top: 10em;
   }

  .text-container{
    padding: 300px 0 20px 60px;
    line-height: 35px;
  }

  .contact-div{
    padding: 450px  100px;
  }

  iframe{
    height: 50vh;
  }
}
/* ... */

